--- a/app/views/addPromise.html
+++ b/app/views/addPromise.html
@@ -1,16 +1,29 @@
 <div class="modal-header">
-    <h3 ng-switch="promise" class="modal-title">
-      <span ng-switch-when="'null'">
-        Promise
-      </span>
-      <span ng-switch-default="promise">
-        Edit promise
-      </span>
+        I promise that...
     </h3>
 </div>
 <div class="modal-body">
   <form role="form">
-    <input ng-model="promise.name" /> {{promise.name}}
+    <div class="form-group">
+      <label for="frequency">every
+        <input type="number" name="frequency" ng-model="promise.frequency" />
+      </label>
+      <select class="form-control col-sm" ng-model="promise.frequencyType">
+        <option value="hour">Hour</option>
+        <option value="day">Day</option>
+        <option value="week">Week</option>
+        <option value="month">Month</option>
+      </select>
+      <label for="frequency">I will
+      <input ng-model="promise.name" /></label>
+      <label for="duration">for
+      <input type="number" ng-model="promise.duration" /></label>
+      <select class="form-control col-sm" ng-model="promise.durationType">
+        <option value="hour">mins</option>
+        <option value="day">hours</option>
+      </select>
+    </div>
+    <textarea class="form-control" ng-model="promise.details" rows="3" placeholder = "in more details"></textarea>
   </form>
 </div>
 <div class="modal-footer">
