--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,24 +1,47 @@
 <div class="row">
-  <div class="col-md-4">
-    <h2>Current</h2>
-    <form role="form">
-      <div ng-repeat="promise in current">
-        <div class="form-group">
-          <label for="{{promise.name}}">{{promise.name}} for {{promise.duration}} {{promise.durationType}} </label>
-          <input type="checkbox" name="{{promise.name}}" ng-model="promise.history.done" ng-click="updatePromise(promise)"/>
-        </div>
+  <div class="col-md-8" ng-controller="PromiseCtrl">
+    <code class="row" ng-controller="PromiseCtrl">
+      <div class="col-md-8">
+        I promise that I will <span editable-text="promise.name">{{promise.name}}</span>
+        every <span editable-number="promise.frequency">{{promise.frequency | ordinal:promise.frequency}}</span>
+        <span editable-select="promise.frequencyType" e-ng-options="type.value as type.text for type in promise.frequencyTypes">{{promise.frequencyType}}</span>
+        for <span editable-number="promise.duration">{{promise.duration}}</span>
+        <span editable-select="promise.durationType" e-ng-options="type.value as type.text for type in promise.durationTypes">
+          {{promise.durationType}}<span ng-show="promise.duration>1">s</span>
+        </span>
       </div>
+      <div class="col-md-2">
+        <button type="submit" class="btn btn-primary btn-xs" ng-click="createPromise(promise)">commit!</button>
+      </div>
+    </code>
+
+    <blockquote class="row" ng-repeat="p in promises">
+      <div class="col-md-8">
+        I promised that I will <span editable-text="p.name">{{p.name}}</span>
+        every <span editable-number="promise.frequency">1</span>
+        <span editable-select="p.frequencyType" e-ng-options="type.value as type.text for type in promise.frequencyTypes">{{p.frequencyType}}</span>
+        for <span editable-number="p.duration">{{p.duration}}</span>
+        <span editable-select="p.durationType" e-ng-options="type.value as type.text for type in promise.durationTypes">{{p.durationType}}</span>
+        since {{p.startTime | date:'dd-MM-yyyy'}} and didn't break the chain for {{p.startTime | daysFrom}}
+      </div>
+      <div class="col-md-2">
+        <button type="submit" class="btn btn-primary btn-xs" ng-click="updatePromise(p)">alter commit!</button><br/><br/>
+        <button type="submit" class="btn btn-danger btn-xs" ng-click="updatePromise(p)">uncommit!</button>
+
+      </div><br/>
+    </blockquote>
+  </div>
+
+  <div class="col-md-4">
+    <form role="form">
+      <blockquote ng-repeat="promise in current" >
+        <label for="{{promise.name}}">
+          <input type="checkbox" name="{{promise.name}}" ng-model="promise.history.done" ng-click="updatePromise(promise)"/>
+          {{promise.name}} for {{promise.duration}} {{promise.durationType}}<span ng-show="promise.duration>1">s</span>
+        </label>
+      </blockquote>
     </form>
   </div>
-  <button type="submit" class="btn btn-primary" ng-click="addPromiseDialog()">Add</button>
 
-  <div class="col-md-8">
-    <div  ng-repeat="promise in promises">
-      <h2>{{promise.name}}</h2>
-      <div>{{promise.frequency}} {{promise.frequencyType}} for {{promise.duration}} {{promise.durationType}}
-         with {{promise.result}} times since {{promise.startTime | date:'dd-MM-yyyy'}}</div>
-         <button type="submit" class="btn btn-primary" ng-click="addPromiseDialog(promise)">Edit</button>
-    </div>
-  </div>
 </div>
 <br/>
