--- a/app/views/main.html
+++ b/app/views/main.html
@@ -26,7 +26,7 @@
       </div>
       <div class="col-md-2">
         <button type="submit" class="btn btn-primary btn-xs" ng-click="updatePromise(p)">alter commit!</button><br/><br/>
-        <button type="submit" class="btn btn-danger btn-xs" ng-click="updatePromise(p)">uncommit!</button>
+        <button type="submit" class="btn btn-danger btn-xs" ng-click="deletePromise(p)">uncommit!</button>
 
       </div><br/>
     </blockquote>
