--- a/app/views/main.html
+++ b/app/views/main.html
@@ -38,6 +38,7 @@
         <label for="{{promise.name}}">
           <input type="checkbox" name="{{promise.name}}" ng-model="promise.history.done" ng-click="updatePromise(promise)"/>
           {{promise.name}} for {{promise.duration}} {{promise.durationType}}<span ng-show="promise.duration>1">s</span>
+          {{promise.history.atTime | date:'dd-MM-yyyy'}}
         </label>
       </blockquote>
     </form>
