--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-md-8" ng-controller="PromiseCtrl">
+<div class="row" ng-controller="PromiseCtrl">
+  <div class="col-md-8">
     <code class="row">
       <div class="col-md-8">
         I promise that I will <span editable-text="promise.name" e-required>{{promise.name}}</span>
@@ -46,3 +46,5 @@
 
 </div>
 <br/>
+
+<button type = "button" class="btn btn-default" ng-click="logout()">logout</button>
