--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,50 +1,73 @@
-<div class="row" ng-controller="PromiseCtrl">
-  <div class="col-md-8">
-    <code class="row">
-      <div class="col-md-8">
-        I promise that I will <span editable-text="promise.name" e-required>{{promise.name}}</span>
-        every <span editable-number="promise.frequency" >{{promise.frequency | ordinal:promise.frequency}}</span>
-        <span editable-select="promise.frequencyType" e-ng-options="type.value as type.text for type in promise.frequencyTypes">{{promise.frequencyType}}</span>
-        for <span editable-number="promise.duration">{{promise.duration}}</span>
-        <span editable-select="promise.durationType" e-ng-options="type.value as type.text for type in promise.durationTypes">
-          {{promise.durationType}}<span ng-show="promise.duration>1">s</span>
-        </span>
-      </div>
-      <div class="col-md-2">
-        <button type="submit" class="btn btn-primary btn-xs" ng-click="createPromise(promise)">commit!</button>
-      </div>
-    </code>
+<div class="header">
+  <div class="navbar navbar-default" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
 
-    <blockquote class="row" ng-repeat="p in promises">
-      <div class="col-md-8">
-        I promised that I will <span editable-text="p.name" e-required>{{p.name}}</span>
-        every <span editable-number="p.frequency">{{p.frequency}}</span>
-        <span editable-select="p.frequencyType" e-ng-options="type.value as type.text for type in promise.frequencyTypes">{{p.frequencyType}}</span>
-        for <span editable-number="p.duration">{{p.duration}}</span>
-        <span editable-select="p.durationType" e-ng-options="type.value as type.text for type in promise.durationTypes">{{p.durationType}}</span>
-        since {{p.startTime | date:'dd-MM-yyyy'}} and didn't break the chain for {{p.startTime | daysFrom}}
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
       </div>
-      <div class="col-md-2">
-        <button type="submit" class="btn btn-primary btn-xs" ng-click="updatePromise(p)">alter commit!</button><br/><br/>
-        <button type="submit" class="btn btn-danger btn-xs" ng-click="deletePromise(p)">uncommit!</button>
 
-      </div><br/>
-    </blockquote>
+      <div class="collapse navbar-collapse" id="js-navbar-collapse">
+
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#" ng-click="logout()">Logout</a></li>
+        </ul>
+      </div>
+    </div>
   </div>
-
-  <div class="col-md-4">
-    <form role="form">
-      <blockquote ng-repeat="promise in current" >
-        <label for="{{promise.name}}">
-          <input type="checkbox" name="{{promise.name}}" ng-model="promise.history.done" ng-click="updatePromise(promise)"/>
-          {{promise.name}} for {{promise.duration}} {{promise.durationType}}<span ng-show="promise.duration>1">s</span>
-          <div ng-show="promise.frequencyType == 'hour' && promise.frequency > 1"> every {{promise.frequency}} hours today </div>
-        </label>
-      </blockquote>
-    </form>
-  </div>
-
 </div>
-<br/>
 
-<button type = "button" class="btn btn-default" ng-click="logout()">logout</button>
+<div class="container-fluid">
+  <div class="row" ng-controller="PromiseCtrl">
+    <div class="col-md-6 col-md-offset-1">
+      <code class="row">
+        <div class="col-md-8">
+          I promise that I will <span editable-text="promise.name" e-required>{{promise.name}}</span>
+          every <span editable-number="promise.frequency" >{{promise.frequency | ordinal:promise.frequency}}</span>
+          <span editable-select="promise.frequencyType" e-ng-options="type.value as type.text for type in promise.frequencyTypes">{{promise.frequencyType}}</span>
+          for <span editable-number="promise.duration">{{promise.duration}}</span>
+          <span editable-select="promise.durationType" e-ng-options="type.value as type.text for type in promise.durationTypes">
+            {{promise.durationType}}<span ng-show="promise.duration>1">s</span>
+          </span>
+        </div>
+        <div class="col-md-2">
+          <button type="submit" class="btn btn-primary btn-xs" ng-click="createPromise(promise)">commit!</button>
+        </div>
+      </code>
+
+      <blockquote class="row" ng-repeat="p in promises">
+        <div class="col-md-8">
+          I promised that I will <span editable-text="p.name" e-required>{{p.name}}</span>
+          every <span editable-number="p.frequency">{{p.frequency}}</span>
+          <span editable-select="p.frequencyType" e-ng-options="type.value as type.text for type in promise.frequencyTypes">{{p.frequencyType}}</span>
+          for <span editable-number="p.duration">{{p.duration}}</span>
+          <span editable-select="p.durationType" e-ng-options="type.value as type.text for type in promise.durationTypes">{{p.durationType}}</span>
+          since {{p.startTime | date:'dd-MM-yyyy'}} and didn't break the chain for {{p.startTime | daysFrom}}
+        </div>
+        <div class="col-md-2">
+          <button type="submit" class="btn btn-primary btn-xs" ng-click="updatePromise(p)">alter commit!</button><br/><br/>
+          <button type="submit" class="btn btn-danger btn-xs" ng-click="deletePromise(p)">uncommit!</button>
+
+        </div><br/>
+      </blockquote>
+    </div>
+
+    <div class="col-md-5">
+      <form role="form">
+        <blockquote ng-repeat="promise in current" >
+          <label for="{{promise.name}}">
+            <input type="checkbox" name="{{promise.name}}" ng-model="promise.history.done" ng-click="updatePromise(promise)"/>
+            {{promise.name}} for {{promise.duration}} {{promise.durationType}}<span ng-show="promise.duration>1">s</span>
+            <div ng-show="promise.frequencyType == 'hour' && promise.frequency > 1"> every {{promise.frequency}} hours today </div>
+          </label>
+        </blockquote>
+      </form>
+    </div>
+
+  </div>
+  <br/>
+</div>
