--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -1,11 +1,23 @@
-<form ng-controller="SignupCtrl">
-  <div class="form-group">
-    <label for="username">Username</label>
-    <input ng-model="user.name" type="text" class="form-control" id="username" placeholder="Username">
+<div class="content">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-3">
+      <br/>
+      <form ng-controller="SignupCtrl">
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input ng-model="user.name" type="text" class="form-control" id="username" placeholder="Username">
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input ng-model="user.password" type="password" class="form-control" id="password" placeholder="Password">
+        </div>
+        <button ng-click="signup()" type="submit" class="btn btn-primary btn-block">Register</button>
+        <div class="col-md-12 col-md-offset-5">
+          <br/>
+          <a href="#/login">Login</a>
+          <br/>
+        </div>
+      </form>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input ng-model="user.password" type="password" class="form-control" id="password" placeholder="Password">
-  </div>
-  <button ng-click="signup()" type="submit" class="btn btn-primary">Register</button> 
-</form>
+</div>
