--- a/app/views/login.html
+++ b/app/views/login.html
@@ -2,14 +2,16 @@
   <div class="row">
     <div class="col-md-4 col-md-offset-3">
       <br/>
-      <form ng-controller="LoginCtrl">
-        <div class="form-group">
+      <form ng-controller="LoginCtrl" name="form" novalidate>
+        <div ng-show="errorMsg" class="alert alert-warning" role="alert">{{errorMsg}}</div>
+          <br />
+        <div class="form-group" ng-class="{'has-error':form.username.$touched && form.username.$error.required}">
           <label for="username">Username</label>
-          <input ng-model="user.name" type="text" class="form-control" id="username" placeholder="Username">
+          <input ng-model="user.name" type="text" class="form-control" name="username" id="username" placeholder="Username" required >
         </div>
-        <div class="form-group">
+        <div class="form-group" ng-class="{'has-error':form.password.$touched && form.password.$error.required}">
           <label for="password">Password</label>
-          <input ng-model="user.password" type="password" class="form-control" id="password" placeholder="Password">
+          <input ng-model="user.password" type="password" class="form-control" name="password" id="password" placeholder="Password" required >
         </div>
         <button ng-click="login()" type="submit" class="btn btn-primary btn-block">Login</button>
         <div class="col-md-12 col-md-offset-5">
