--- a/app/views/overview.html
+++ b/app/views/overview.html
@@ -2,11 +2,14 @@
   <div class="col-md-6 col-md-offset-1">
     <code class="row">
       <div class="col-md-8">
-        I promise that I will <span editable-text="promise.name" e-required>{{promise.name}}</span>
+        I <span editable-select="promise.public" e-ng-options="p.value as p.text for p in publicOptions">
+          {{showSelected(promise)}}
+        </span>
+        promise that I will <span editable-text="promise.name" e-required>{{promise.name}}</span>
         every <span editable-number="promise.frequency" >{{promise.frequency | ordinal:promise.frequency}}</span>
-        <span editable-select="promise.frequencyType" e-ng-options="type.value as type.text for type in promise.frequencyTypes">{{promise.frequencyType}}</span>
+        <span editable-select="promise.frequencyType" e-ng-options="type.value as type.text for type in frequencyTypes">{{promise.frequencyType}}</span>
         for <span editable-number="promise.duration">{{promise.duration}}</span>
-        <span editable-select="promise.durationType" e-ng-options="type.value as type.text for type in promise.durationTypes">
+        <span editable-select="promise.durationType" e-ng-options="type.value as type.text for type in durationTypes">
           {{promise.durationType}}<span ng-show="promise.duration>1">s</span>
         </span>
       </div>
@@ -17,11 +20,12 @@
 
     <blockquote class="row" ng-repeat="p in promises">
       <div class="col-md-8">
-        I promised that I will <span editable-text="p.name" e-required>{{p.name}}</span>
+        I <span editable-select="p.public" e-ng-options="p.value as p.text for p in publicOptions">{{showSelected(promise)}}</span>
+        promised that I will <span editable-text="p.name" e-required>{{p.name}}</span>
         every <span editable-number="p.frequency">{{p.frequency}}</span>
-        <span editable-select="p.frequencyType" e-ng-options="type.value as type.text for type in promise.frequencyTypes">{{p.frequencyType}}</span>
+        <span editable-select="p.frequencyType" e-ng-options="type.value as type.text for type in frequencyTypes">{{p.frequencyType}}</span>
         for <span editable-number="p.duration">{{p.duration}}</span>
-        <span editable-select="p.durationType" e-ng-options="type.value as type.text for type in promise.durationTypes">{{p.durationType}}</span>
+        <span editable-select="p.durationType" e-ng-options="type.value as type.text for type in durationTypes">{{p.durationType}}</span>
         since {{p.startTime | date:'dd-MM-yyyy'}} and didn't break the chain for {{p.startTime | daysFrom}}
       </div>
       <div class="col-md-2">
