--- a/app/views/main.html
+++ b/app/views/main.html
@@ -15,6 +15,7 @@
 
         <ul class="nav navbar-nav navbar-left">
           <li><a href="/">Home</a></li>
+          <li><a ui-sref=".public">Other's promises</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
