--- a/app/views/overview.html
+++ b/app/views/overview.html
@@ -26,7 +26,7 @@
         <span editable-select="p.frequencyType" e-ng-options="type.value as type.text for type in frequencyTypes">{{p.frequencyType}}</span>
         for <span editable-number="p.duration">{{p.duration}}</span>
         <span editable-select="p.durationType" e-ng-options="type.value as type.text for type in durationTypes">{{p.durationType}}</span>
-        since {{p.startTime | date:'dd-MM-yyyy'}} and didn't break the chain for {{p.startTime | daysFrom}}
+        since {{p.startTime | date:'dd-MM-yyyy'}} <span ng-show="p.chain > 1"> and built the chain of {{p.chain - 1}} link<span ng-show="p.chain > 2">s</span>!</span>
       </div>
       <div class="col-md-2">
         <button type="submit" class="btn btn-primary btn-xs" ng-click="updatePromise(p)">alter commit!</button><br/><br/>
