--- a/app/views/overview.html
+++ b/app/views/overview.html
@@ -20,13 +20,13 @@
 
     <blockquote class="row" ng-repeat="p in promises">
       <div class="col-md-8">
-        I <span editable-select="p.public" e-ng-options="p.value as p.text for p in publicOptions">{{showSelected(promise)}}</span>
+        I <span editable-select="p.public" e-ng-options="p.value as p.text for p in publicOptions">{{showSelected(p)}}</span>
         promised that I will <span editable-text="p.name" e-required>{{p.name}}</span>
         every <span editable-number="p.frequency">{{p.frequency}}</span>
         <span editable-select="p.frequencyType" e-ng-options="type.value as type.text for type in frequencyTypes">{{p.frequencyType}}</span>
         for <span editable-number="p.duration">{{p.duration}}</span>
         <span editable-select="p.durationType" e-ng-options="type.value as type.text for type in durationTypes">{{p.durationType}}</span>
-        since {{p.startTime | date:'dd-MM-yyyy'}} <span ng-show="p.chain > 1"> and built the chain of {{p.chain - 1}} link<span ng-show="p.chain > 2">s</span>!</span>
+        since {{p.startTime | date:'dd-MM-yyyy'}} <span ng-show="p.chain > 0"> and built the chain of {{p.chain}} link<span ng-show="p.chain > 1">s</span>!</span>
       </div>
       <div class="col-md-2">
         <button type="submit" class="btn btn-primary btn-xs" ng-click="updatePromise(p)">alter commit!</button><br/><br/>
