--- a/app/views/public.html
+++ b/app/views/public.html
@@ -8,9 +8,9 @@
         for {{p.duration}}
         {{p.durationType}}
         since {{p.startTime | date:'dd-MM-yyyy'}}
-        <span ng-show="p.chain > 1">
-          and built the chain of {{p.chain - 1}} link<span ng-show="p.chain > 2">s</span>!
-        </span>     
+        <span ng-show="p.chain > 0">
+          and built the chain of {{p.chain}} link<span ng-show="p.chain > 1">s</span>!
+        </span>
       <div class="col-md-12 col-md-offset-8">
         <br/>
         -- {{p.madeBy.name}}
