--- a/app/views/overview.html
+++ b/app/views/overview.html
@@ -27,10 +27,13 @@
         for <span editable-number="p.duration">{{p.duration}}</span>
         <span editable-select="p.durationType" e-ng-options="type.value as type.text for type in durationTypes">{{p.durationType}}</span>
         since {{p.startTime | date:'dd-MM-yyyy'}} <span ng-show="p.chain > 0"> and built the chain of {{p.chain}} link<span ng-show="p.chain > 1">s</span>!</span>
+        <span ng-show="p.broken">unfortunately I have broken the chain... </span>
       </div>
       <div class="col-md-2">
-        <button type="submit" class="btn btn-primary btn-xs" ng-click="updatePromise(p)">alter commit!</button><br/><br/>
-        <button type="submit" class="btn btn-danger btn-xs" ng-click="deletePromise(p)">uncommit!</button>
+        <div ng-hide="p.broken">
+          <button type="submit"  class="btn btn-primary btn-xs" ng-click="updatePromise(p)">alter commit!</button><br/><br/>
+        </div>
+        <button type="submit" class="btn btn-danger btn-xs" ng-click="archivePromise(p)">uncommit!</button>
 
       </div><br/>
     </blockquote>
